# drizzle

./: .bootstrap  .bzrignore  .quickly  AUTHORS  COPYING  COPYING.BSD  DRIZZLE.FAQ  Doxyfile  Makefile.am  NEWS  README  bootstrap.sh  configure.ac  configure.in  notes.textile
client/: Makefile.am  client_priv.h  completion_hash.c  completion_hash.cc  completion_hash.h  conclusions.h  drizzle.1  drizzle.c  drizzle.cc  drizzleadmin.cc  drizzlebinlog.cc  drizzlecheck.1  drizzlecheck.c  drizzlecheck.cc  drizzled.8  drizzledump.1  drizzledump.c  drizzledump.cc  drizzledump.h  drizzledump_data.cc  drizzledump_data.h  drizzledump_drizzle.cc  drizzledump_drizzle.h  drizzledump_mysql.cc  drizzledump_mysql.h  drizzleimport.1  drizzleimport.c  drizzleimport.cc  drizzleslap.1  drizzleslap.cc  drizzletest.cc  errname.cc  errname.cc.THIS  errname.h  get_password.c  get_password.cc  get_password.h  include.am  linebuffer.cc  linebuffer.h  (+25 more)
drizzled/: Makefile.am  Plugin_registry.cc  Plugin_registry_impl.cc  abort_exception.h  alter_column.h  alter_drop.h  alter_info.cc  alter_info.h  atomics.h  authentication.cc  authentication.h  base.h  cached_directory.cc  cached_directory.h  cached_item.cc  cached_item.h  calendar.cc  calendar.h  catalog.cc  catalog.h  charset-def.cc  charset.cc  charset.h  charset_info.h  check_stack_overrun.cc  check_stack_overrun.h  client_settings.h  command.h  common.h  common_fwd.h  common_includes.h  comp_creator.cc  comp_creator.h  compare_double.h  configvar.cc  configvar.h  connect.h  constrained_value.h  copy_field.h  copy_info.h  (+458 more)
drizzled/algorithm/: crc32.cc  crc32.h  include.am  sha1.cc  sha1.h
drizzled/atomic/: gcc_traits.h  pthread_traits.h  sun_studio.h
drizzled/catalog/: cache.cc  cache.h  engine.h  instance.h  local.cc  local.h
drizzled/command/: assign_to_keycache.cc  assign_to_keycache.h  checksum.cc  checksum.h  commit.cc  commit.h  default_select.cc  delete.cc  (+22 more)
extra/: Makefile.am  check_include_guards.sh  clean_source.sh  comp_err.c  cpplint.py  cpplint.sh  include.am  innochecksum.c  my_print_defaults.c  my_print_defaults.cc  mysql_password_hash.c  mysql_waitpid.c  mysql_waitpid.cc  run_cpplint.sh
include/: Makefile.am  comp_err.c  decimal.h  drizzle.h  drizzle_com.h  drizzle_h.ic  hash.h  heap.h  keycache.h  m_ctype.h  m_string.h  my_attribute.h  my_base.h  my_bit.h  my_bitmap.h  my_dir.h  my_getopt.h  my_global.h  my_handler.h  my_md5.h  my_net.h  my_no_pthread.h  my_pthread.h  my_sys.h  my_time.h  my_tree.h  my_trie.h  myisam.h  myisampack.h  mysql.h  mysql_com.h  mysql_embed.h  mysql_h.ic  mysys_err.h  sha1.h  sql_common.h  thr_alarm.h  thr_lock.h  typelib.h  violite.h
libdrizzle/: Makefile.am  client.c  client_settings.h  column.c  column.cc  column.h  column_client.h  column_server.h  command.c  command.cc  command_client.h  command_server.h  common.h  conn.c  conn.cc  conn.h  conn_client.h  conn_local.h  conn_server.h  conn_uds.c  conn_uds.cc  constants.h  drizzle.c  drizzle.cc  drizzle.h  drizzle_client.h  drizzle_com.h  drizzle_data.c  drizzle_data.h  drizzle_field.h  drizzle_h.ic  drizzle_local.h  drizzle_methods.h  drizzle_options.h  drizzle_parameters.h  drizzle_res.h  drizzle_rows.h  drizzle_server.h  drizzle_time.h  errmsg.c  (+56 more)
libdrizzleclient/: Makefile.am  client.c  client.cc  drizzle.c  drizzle.cc  drizzle.h  drizzle_data.c  drizzle_data.h  drizzle_field.h  drizzle_methods.h  drizzle_options.h  drizzle_parameters.h  drizzle_res.h  drizzle_rows.h  errmsg.c  errmsg.cc  errmsg.h  get_password.c  get_password.h  libdrizzle.c  libdrizzle.h  libdrizzle.ver  libdrizzle_priv.c  libdrizzle_priv.h  libdrizzleclient.ver  local_infile.c  local_infile.h  net_serv.c  net_serv.h  options.h  pack.c  pack.h  password.c  password.h  vio.c  vio.h  viosocket.c
libmysql/: Makefile.am  Makefile.shared  client.c  client_settings.h  libmysql.c  net_serv.c
mysql-test/: Makefile.am  mysql-test-run-shell.sh  mysql-test-run.pl  resolve-stack  resolve_stack_dump.c
mystrings/: CHARSET_INFO.txt  Makefile.am  bchange.c  bchange.cc  bcmp.c  bmove.c  bmove512.c  bmove_upp.c  bmove_upp.cc  bzero.c  ctype-big5.c  ctype-bin.c  ctype-bin.cc  ctype-cp932.c  ctype-czech.c  ctype-euc_kr.c  ctype-eucjpms.c  ctype-extra.c  ctype-extra.cc  ctype-gb2312.c  ctype-gbk.c  ctype-latin1.c  ctype-mb.c  ctype-mb.cc  ctype-simple.c  ctype-simple.cc  ctype-sjis.c  ctype-tis620.c  ctype-uca.c  ctype-uca.cc  ctype-ucs2.c  ctype-ujis.c  ctype-utf8.c  ctype-utf8.cc  ctype-win1250ch.c  ctype.c  ctype.cc  decimal.c  decimal.cc  decimal.h  (+50 more)
mysys/: Makefile.am  aio_result.h  array.c  array.cc  base64.c  base64.cc  base64.h  cached_directory.cc  cached_directory.h  charset-def.c  charset-def.cc  charset.c  charset.cc  checksum.c  checksum.cc  default.c  default.cc  default_modify.c  default_modify.cc  definitions.h  dynamic_array.cc  dynamic_array.h  errors.c  errors.cc  hash.c  hash.cc  hash.h  iocache.h  list.c  list.cc  make-conf.c  mf_arr_appstr.c  mf_arr_appstr.cc  mf_brkhant.c  mf_cache.c  mf_cache.cc  mf_dirname.c  mf_dirname.cc  mf_fn_ext.c  mf_fn_ext.cc  (+167 more)
scripts/: Makefile.am  make_binary_distribution.sh  mysql_config.pl.in  mysql_config.sh  mysql_install_db.sh  mysql_system_tables.sql  mysql_system_tables_fix.sql  mysqldumpslow.sh
sql/: Makefile.am  derror.cc  drizzled.cc  drizzled_safe.in  field.cc  field.h  field_conv.cc  filesort.cc  gen_lex_hash.cc  handler.cc  handler.h  init.cc  item.cc  item.h  item_cmpfunc.cc  item_cmpfunc.h  item_create.cc  item_create.h  item_func.cc  item_func.h  item_strfunc.cc  item_strfunc.h  item_subselect.cc  item_subselect.h  item_sum.cc  item_sum.h  item_timefunc.cc  item_timefunc.h  key.cc  lex.h  lex_symbol.h  lock.cc  log.cc  log.h  log_event.cc  log_event.h  my_decimal.h  my_lock.c  mysql_priv.h  mysqld.cc  (+58 more)
tests/: Makefile.am  dbqp.py  drizzle-test-run.pl  include.am  kewpie.py  mysql_client_test.c  resolve_stack_dump.c  resolve_stack_dump.cc  ssl_test.c  stress-test.pl  strip-valgrind  test-run.pl  test-run.py  valgrind.supp
vio/: Makefile.am  vio.c  vio.cc  vio_priv.h  violite.h  viosocket.c  viosocket.cc  viotest.cc
(+8216 files in other folders)
